--- a/Damps/res/layout/new_post.xml
+++ b/Damps/res/layout/new_post.xml
@@ -4,26 +4,27 @@
     android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:id="@+id/rl_newp_layout1"
+        android:id="@+id/rl_newpost_layout1"
         style="@style/titlebar" >
 
         <ImageView
-            android:id="@+id/iv_newp_back"
+            android:id="@+id/iv_newpost_back"
             style="@style/pic_title_left" />
 
         <TextView
+            android:id="@+id/tv_newpost_title"
             style="@style/title"
-            android:layout_toRightOf="@+id/iv_newp_back"
+            android:layout_toRightOf="@+id/iv_newpost_back"
             android:text="@string/new_post" />
 
         <ProgressBar
-            android:id="@+id/pb_newp_bar1"
+            android:id="@+id/pb_newpost_bar1"
             style="@style/progressbar"
             android:layout_alignParentRight="false"
-            android:layout_toLeftOf="@+id/iv_newp_accept" />
+            android:layout_toLeftOf="@+id/iv_newpost_accept" />
 
         <ImageView
-            android:id="@+id/iv_newp_accept"
+            android:id="@+id/iv_newpost_accept"
             style="@style/pic_title_right"
             android:contentDescription="@string/pic_acc"
             android:onClick="post"
@@ -31,17 +32,17 @@
     </RelativeLayout>
 
     <TextView
-        android:id="@+id/tv_newp_msg"
+        android:id="@+id/tv_newpost_msg"
         style="@style/desc_edittext"
-        android:layout_below="@+id/rl_newp_layout1"
+        android:layout_below="@+id/rl_newpost_layout1"
         android:text="@string/message"
         android:paddingLeft="5dp" />
 
     <EditText
-        android:id="@+id/et_newp_msg"
+        android:id="@+id/et_newpost_msg"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_below="@+id/tv_newp_msg"
+        android:layout_below="@+id/tv_newpost_msg"
         android:inputType="textMultiLine" />
 
 </RelativeLayout>
