--- a/Damps/res/values/arrays.xml
+++ b/Damps/res/values/arrays.xml
@@ -35,7 +35,7 @@
         <item>C.R.E.A.M</item>
         <item>Defenders</item>
         <item>Dominators</item>
-        <item>DPNJC-Madness</item>
+        <item>DPNJC IBEXS</item>
         <item>Fantasy-Failure</item>
         <item>Hookaz</item>
         <item>Hustlaz</item>
