--- a/Damps/res/layout-land/roster.xml
+++ b/Damps/res/layout-land/roster.xml
@@ -1,216 +1,44 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content" >
+    android:layout_height="match_parent" >
 
     <RelativeLayout
-        android:id="@+id/rl_ros_layout1"
+        android:id="@+id/rl_roster_layout1"
         style="@style/titlebar" >
 
         <ImageView
-            android:id="@+id/iv_ros_back"
+            android:id="@+id/iv_roster_back"
             style="@style/pic_title_left" />
 
         <TextView
-            android:id="@+id/tv_ros_view1"
+            android:id="@+id/tv_roster_title"
             style="@style/title"
-            android:layout_toRightOf="@+id/iv_ros_back" />
+            android:layout_toRightOf="@+id/iv_roster_back" />
 
         <ProgressBar
-            android:id="@+id/pb_ros_bar1"
+            android:id="@+id/pb_roster_bar1"
             style="@style/progressbar" />
     </RelativeLayout>
 
-     <LinearLayout
-         android:id="@+id/ll_ros_table1"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignLeft="@+id/tl_ros_table1"
-        android:layout_alignParentTop="true"
-        android:layout_marginLeft="26dp" >
-    </LinearLayout>
-    <!--
-    <TableLayout
-        android:id="@+id/tl_ros_table1"
+    <de.damps.fantasy.DDScroll
+        android:layout_below="@+id/rl_roster_layout1"
+        android:id="@+id/sv_roster_view1"
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/rl_ros_layout1"
-        android:layout_marginLeft="3dp"
-        android:layout_marginRight="3dp"
-        android:layout_marginTop="5dp"
-        android:orientation="vertical"
-        android:stretchColumns="3" >
-
-        <TableRow
-            android:layout_width="fill_parent"
-            android:layout_height="wrap_content" >
-
-            <TextView
-                style="@style/column"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_left"
-                android:onClick="sortTeam"
-                android:text="@string/team" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:onClick="sortPos"
-                android:text="@string/pos" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:onClick="sortName"
-                android:text="@string/name" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd1" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd2" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd3" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd4" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd5" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd6" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd7" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd8" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd9" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd10" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd11" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd12" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd13" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd14" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd15" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd16" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:layout_marginRight="1dp"
-                android:background="@drawable/column_mid"
-                android:text="@string/gd17" />
-
-            <TextView
-                style="@style/column"
-                android:layout_marginLeft="1dp"
-                android:background="@drawable/column_right"
-                android:onClick="sortScore"
-                android:text="@string/score" />
-        </TableRow>
-    </TableLayout>
-    -->
-
-    <ScrollView
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/tl_ros_table1" >
+        android:layout_height="fill_parent"
+        android:drawingCacheQuality="low"
+        android:scrollbars="horizontal" >
 
         <TableLayout
-            android:id="@+id/tl_rostertable"
+            android:id="@+id/tl_roster_roster"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:stretchColumns="2" >
-        </TableLayout>
-    </ScrollView>
+            android:layout_marginLeft="3dp"
+            android:layout_marginRight="3dp"
+            android:layout_marginTop="5dp"
+            android:orientation="vertical" >
 
-   
+        </TableLayout>
+    </de.damps.fantasy.DDScroll>
 
 </RelativeLayout>
