--- a/Damps/res/values/styles.xml
+++ b/Damps/res/values/styles.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<resources>
+<resources xmlns:android="http://schemas.android.com/apk/res/android">
 
     <style name="titlebar">
         <item name="android:layout_width">fill_parent</item>
@@ -15,8 +15,23 @@
         <item name="android:background">@drawable/button_selector</item>
         <item name="android:textColor">@color/weis</item>
         <item name="android:textSize">25dp</item>
-        <item name="android:paddingLeft">10dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
         <item name="android:layout_margin">4dp</item>
+    </style>
+    
+    <style name="radio_button">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:background">@drawable/radio_selector</item>
+        <item name="android:textColor">@color/weis</item>
+        <item name="android:textSize">25dp</item>
+        <item name="android:paddingLeft">5dp</item>
+        <item name="android:paddingRight">5dp</item>
+        <item name="android:layout_margin">4dp</item>
+        <item name="android:gravity">center</item>
+        <item name="android:button">@null</item>
     </style>
 
     <style name="title" parent="@android:style/TextAppearance.Medium">
